syntax = "proto3";

/*
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
*/

//import "connections.proto";

package proto_shared; // 
option csharp_namespace = "Proto.Config2";

/** 
 * @exclude
 * ####################################### N U L L A B L E ##########################################
 */
// all simple nullable (generator check suffics '_nullable')

// @base VmValidatableWithSeverity
message test_shared_messsage {
    bool bool_value = 1;
    string string_value = 2;
}

